# pytest-fixturecheck

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MODERNIZATION_SUMMARY.md  Makefile  NEXT_STEPS.md  PRE_COMMIT_HOOKS.md  PROPERTY_VALIDATORS.md  README.md  codecov.yml  coverage.xml  initial-context.md  mypy.ini  pyproject.toml  setup.cfg  setup.py  tech_concepts.dot  tox.ini
.github/workflows/: ci.yml
.pre-commit-hooks/: sync_version.py
docs/: ADVANCED_VALIDATORS.md  CLI.md  DJANGO_VALIDATORS.md  FINDINGS_FIXED.md  NEXT_STEPS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md
scripts/: bump_version.py  check_release_readiness.sh  update_badge.py
src/pytest_fixturecheck/: __init__.py  cli.py  decorator.py  django.py  django_validators.py  plugin.py  utils.py  validators.py  validators_advanced.py  validators_fix.py
tests/: conftest.py  example_bookstore.py  example_django.py  example_django_fixture_validation.py  test_advanced_validators.py  test_advanced_validators_comprehensive.py  test_asyncio_compat.py  test_asyncio_comprehensive.py  test_basic.py  test_broken_fixture.py  test_cli.py  test_cli_verbose.py  test_decorator_comprehensive.py  test_decorator_comprehensive_2.py  test_decorator_factory_functions.py  test_decorator_internals.py  test_decorator_order.py  test_decorator_simple.py  test_default_validator.py  test_django_mock.py  test_django_validators.py  test_django_validators_comprehensive.py  test_expect_validation_error.py  test_expect_validation_error_comprehensive.py  test_expected_validation_error.py  test_fixed_property_validator.py  test_fixed_validators.py  test_init.py  test_init_coverage.py  test_inline.py  test_minimal_approach.py  test_phase_aware.py  test_plugin.py  test_plugin_error_paths.py  test_plugin_validation.py  test_property_fixture.py  test_property_values_comprehensive.py  test_property_values_fix.py  test_property_values_fixed.py  test_property_values_simple.py  (+14 more)
