[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fixturecheck"
version = "0.3.2"
description = "A pytest plugin to check fixture validity before test execution"
readme = "README.md"
authors = [
    {name = "Russ"}
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0.0",
]

[project.optional-dependencies]
django = [
    "django>=3.0",
]
asyncio = [
    "pytest-asyncio>=0.21.0",
]
dev = [
    "pytest>=6.0.0",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
    "pytest-cov",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
repository = "https://github.com/topiaruss/pytest-fixturecheck"

[project.entry-points.pytest11]
fixturecheck = "pytest_fixturecheck.plugin"
