[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-fixturecheck"
version = "0.4.0"
description = "A pytest plugin to check fixture validity before test execution"
readme = "README.md"
authors = [
    {name = "Russ Ferriday"}
]
license = {text = "MIT"}
keywords = ["pytest", "testing", "fixtures", "python", "pytest-plugin", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0.0",
]

[project.optional-dependencies]
django = [
    "django>=3.0",
]
asyncio = [
    "pytest-asyncio>=0.21.0",
]
dev = [
    "pytest>=6.0.0",
    "black",
    "flake8",
    "mypy",
    "build",
    "twine",
    "pytest-cov",
    "pytest-asyncio>=0.21.0",
    "pre-commit",
    "bandit",
    "pyupgrade",
    "pydocstyle",
    "pylint",
    "pylint-pytest",
    "tomli",
    "tomli_w",
    "pytest-mock",
]

[project.urls]
repository = "https://github.com/topiaruss/pytest-fixturecheck"

[project.entry-points.pytest11]
fixturecheck = "pytest_fixturecheck.plugin"

[tool.bandit]
exclude_dirs = ["tests", ".tox", ".venv"]
skips = ["B101", "B104"]  # Skip assert warnings and hardcoded binding
